# xfce4-i3-workspaces-plugin

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  THANKS  TODO  autogen.sh  configure.ac.in  xfce4-i3-workspaces-plugin.spec
debian/: changelog  control  copyright  rules  watch
icons/: Makefile.am
icons/48x48/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  i3-workspaces-plugin.c  i3-workspaces-plugin.h  i3-workspaces.c  i3-workspaces.desktop.in  i3-workspaces.h  i3w-config.c  i3w-config.h  i3w-multi-monitor-utils.c  i3w-multi-monitor-utils.h  i3w-options.c  i3w-options.h  i3w-plugin.c  i3w-plugin.h  i3wm-delegate.c  i3wm-delegate.h  plugin.h
po/: Makefile.in.in  POTFILES.in
